Fixed spacing issue on mobile search results
Fixed an issue where the cards overlaped the metaBar on the mobile search results page

--- a/components/stylesheets/MobileSearchResults.module.css
+++ b/components/stylesheets/MobileSearchResults.module.css
@@ -49,6 +49,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    padding-top: 50px;
 }
 
 .metaBar {
@@ -61,10 +62,6 @@
     padding: 12px;
     background-color: hsl(0deg 0% 53% / 28%);
     box-sizing: border-box;
-}
-
-.metaBar.sorting {
-    position: initial;
 }
 
 .metaBar p {
